tests/init_state/borrow_precondition/shared_borrow_of_partial.err.expected
error: at 7:5: [INIT-BorrowStateMismatch] In function 'f', block 'entry': cannot create & of 'p': place must be initialized at borrow, but is partially initialized
   |
 7 |     r = &p;
   |     ^^^^^^
